ocaml/testsuite/tests/typing-layouts-gadt-sort-var/test.compilers.reference
File "insert.ml", line 5, characters 47-48:
5 | and packed = Gadt.Mk ((fun _ -> assert false), g)
                                                   ^
Error: This expression has type "t_void -> unit"
       but an expression was expected of type "'a -> unit"
       The layout of t_void is void
         because of the definition of t_void at file "insert.ml", line 1, characters 0-18.
       But the layout of t_void must be a sublayout of value
         because of layout requirements from an imported definition.
